Update Dockerfile for JavaFX support and modify encodings.xml for DatabaseConnection.java